Fix sidebar not aligning as expected

--- a/torntools/scripts/content/home/ttHome.css
+++ b/torntools/scripts/content/home/ttHome.css
@@ -45,3 +45,8 @@
 	width: 1085px;
 	background-color: white;
 }
+
+#sidebarroot.tt-modified {
+	left: 0%;
+	position: absolute;
+}
